# SCAN_Planner_dmq

./: .gitignore  README.md  send_clicked_route.py  send_route_xy.py
build_manual/: test_navigation_control  test_navigation_coordinator
docs/: ARCHITECTURE_BOUNDARIES.md  CODE_MAP.md  LOGGING_GUIDE.md  NAVIGATION_WORKFLOW.md
log/: latest_build
src/navdog/navdog_core/: CMakeLists.txt  README.md  package.xml
src/navdog/navdog_core/include/navdog_core/: config.hpp  goal_controller.hpp  navigation_coordinator.hpp  navigation_mode_manager.hpp  recovery_controller.hpp  rejoin_target_selector.hpp  route_corridor_evaluator.hpp  route_corridor_observation_gate.hpp  route_follower.hpp  route_manager.hpp  route_progress_tracker.hpp  safety_supervisor.hpp  start_align_controller.hpp  task_manager.hpp  trajectory_follower.hpp  types.hpp
src/navdog/navdog_core/src/: goal_controller.cpp  navigation_coordinator.cpp  navigation_coordinator.cpp.active_traj_20260713_144401.bak  navigation_coordinator.cpp.bak_20260713_140946  navigation_coordinator.cpp.single_scan_fix_20260713_143311.bak  navigation_mode_manager.cpp  recovery_controller.cpp  rejoin_target_selector.cpp  route_corridor_evaluator.cpp  route_corridor_observation_gate.cpp  route_follower.cpp  route_manager.cpp  route_progress_tracker.cpp  safety_supervisor.cpp  safety_supervisor.cpp.compile_fix_20260713_141131.bak  safety_supervisor.cpp.escape_fix_20260713_142638.bak  start_align_controller.cpp  task_manager.cpp  trajectory_follower.cpp
src/navdog/navdog_core/test/: test_navigation_control.cpp  test_navigation_coordinator.cpp  test_navigation_mode_manager.cpp  test_recovery_controller.cpp  test_route_corridor_evaluator.cpp  test_route_corridor_observation_gate.cpp  test_route_manager.cpp  test_route_progress_tracker.cpp  test_start_align_controller.cpp  test_task_manager.cpp
src/navdog/navdog_protocol/: CMakeLists.txt  package.xml
src/navdog/navdog_protocol/include/navdog_protocol/: mqtt_bridge.hpp  mqtt_codec.hpp  mqtt_log.hpp
src/navdog/navdog_protocol/src/: mqtt_bridge.cpp  mqtt_codec.cpp  mqtt_log.cpp
src/navdog/navdog_protocol/test/: test_mqtt_bridge.cpp  test_mqtt_codec.cpp  test_mqtt_log.cpp
src/navdog/navdog_runtime/: CMakeLists.txt  package.xml
src/navdog/navdog_runtime/config/: navdog_sim.yaml
src/navdog/navdog_runtime/include/navdog_runtime/: application_config.hpp  final_command_publisher.hpp  mqtt_bridge.hpp  navdog_runtime_node.hpp  ros1_config_loader.hpp  velocity_slew_limiter.hpp
src/navdog/navdog_runtime/launch/: navdog_sim.launch
src/navdog/navdog_runtime/src/: cmd_vel_owner_mux.cpp  final_command_publisher.cpp  main.cpp  mqtt_bridge.cpp  navdog_runtime_node.cpp  ros1_config_loader.cpp
src/navdog/navdog_runtime/test/: test_final_command_publisher.cpp  test_mqtt_bridge.cpp  test_runtime_config.cpp  test_runtime_mapping.cpp  test_velocity_slew_limiter.cpp
src/navdog/navdog_scan_adapter/: CMakeLists.txt  CMakeLists.txt.bak  package.xml
src/navdog/navdog_scan_adapter/include/navdog_scan_adapter/: inflated_grid_query_3d.hpp  occupancy_query_adapter.hpp  scan_grid_map_query.hpp  scan_local_planner_adapter.hpp  scan_obstacle_summary_evaluator_3d.hpp  scan_route_corridor_evaluator_3d.hpp
src/navdog/navdog_scan_adapter/src/: occupancy_query_adapter.cpp  scan_grid_map_query.cpp  scan_local_planner_adapter.cpp  scan_local_planner_adapter.cpp.active_traj_20260713_144221.bak  scan_obstacle_summary_evaluator_3d.cpp  scan_route_corridor_evaluator_3d.cpp
src/navdog/navdog_scan_adapter/test/: test_scan_local_planner_adapter.cpp  test_scan_obstacle_summary_evaluator_3d.cpp  test_scan_route_corridor_evaluator_3d.cpp
src/navdog/navdog_task/: CMakeLists.txt  package.xml
src/navdog/navdog_task/include/navdog_task/: task_manager.hpp  task_types.hpp
src/navdog/navdog_task/src/: task_manager.cpp
src/navdog/navdog_task/test/: read.txt  test_task_manager.cpp
src/planner/bspline_opt/include/bspline_opt/: bspline_optimizer.h
src/planner/bspline_opt/src/: bspline_optimizer.cpp  uniform_bspline.cpp
src/planner/path_searching/src/: dyn_a_star.cpp
src/planner/plan_env/: CMakeLists.txt
src/planner/plan_env/include/plan_env/: grid_map.h
src/planner/plan_env/src/: grid_map.cpp
src/planner/plan_manage/: CMakeLists.txt  package.xml
src/planner/plan_manage/include/plan_manage/: plan_container.hpp  planner_manager.h  scan_replan_fsm.h
src/planner/plan_manage/launch/: advanced_param.xml  default.rviz  run.launch
src/planner/plan_manage/src/: closed_loop_controller.cpp  go2_gait_publisher.cpp  go2_kinematic_sim.cpp  open_loop_controller.cpp  planner_manager.cpp  scan_planner_node.cpp  scan_replan_fsm.cpp
src/planner/plan_manage_dmq/: CMakeLists.txt  package.xml
src/planner/plan_manage_dmq/include/plan_manage_dmq/: plan_container.hpp  planner_manager.h  scan_replan_fsm.h
src/planner/plan_manage_dmq/launch/: advanced_param.xml  default.rviz  native_scan_takeover.launch  native_scan_takeover.launch.local_target_fix_20260713_152340.bak  run.launch  rviz.launch  simulator.xml
src/planner/plan_manage_dmq/src/: closed_loop_controller.cpp  closed_loop_controller.cpp.before_scan_smooth.bak  go2_gait_publisher.cpp  go2_kinematic_sim.cpp  open_loop_controller.cpp  planner_manager.cpp  scan_planner_node.cpp  scan_replan_fsm.cpp
src/planner/traj_utils/src/: planning_visualization.cpp
src/simulator/Utils/go2_description/: README.md  package.xml
src/simulator/Utils/odom_visualization/: CMakeLists.txt
src/simulator/local_sensing/: CMakeLists.txt  package.xml
src/simulator/local_sensing/include/: 360camera.vs  opengl_sim.hpp  shader_m.h
src/simulator/local_sensing/src/: opengl_render_node.cpp  pointcloud_render_node.cpp
src/simulator/map_generator/: CMakeLists.txt  package.xml
src/simulator/map_generator/src/: map_publisher.cpp
src/simulator/mockamap/config/: rviz.rviz
src/simulator/mockamap/launch/: mockamap.launch  perlin3d.launch  post2d.launch
src/simulator/mockamap/src/: ces_randommap.cpp  maps.cpp
tools/: README.md  check_navdog_layer_boundaries.sh  keypoint_recorder.py
(+4 files in other folders)
